fix: use "gap" with grid
Using "gap" with Flexbox layout is not supported on iOS Safari, instead 
Grid layout is to be used.

--- a/packages/core/src/internal/indicator-container/indicator-container.scss
+++ b/packages/core/src/internal/indicator-container/indicator-container.scss
@@ -10,13 +10,14 @@
     @include helpers.font('300-regular');
 
     color: helpers.color('content-main');
-    display: inline-flex;
+    display: inline-grid;
     gap: $padding;
+    grid-auto-flow: column;
     padding: $padding;
     position: relative;
 
     &.-bordered {
-      display: flex;
+      display: grid;
     }
   }
 
